--- a/lot/landmapper/static/landmapper/css/report.css
+++ b/lot/landmapper/static/landmapper/css/report.css
@@ -5,7 +5,7 @@
 }
 
 p {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 1.75;
   margin-bottom: 0;
 }
@@ -68,7 +68,7 @@ p {
 }
 
 .anchor-links {
-  font-size: 20px;
+  font-size: 18px;
   line-height: 38px;
   letter-spacing: 1px;
   margin: 2vh -4px; /* -4 for .achor-links a padding */
@@ -76,9 +76,10 @@ p {
 }
 
 .anchor-links a {
+  color: var(--primary-color);
   font-family: var(--primary-font-heavy);
   font-weight: 900;
-  padding: 0 4px;
+  padding: 0;
 }
 
 .legend-wrap {
